# ror/doc/api/srv/api/swagger.json
@@ -309,6 +309,14 @@
   "description" : "Video ID",
   "required" : true,
   "type" : "integer"
+},
+        {
+  "in" : "body",
+  "name" : "body",
+  "required" : false,
+  "schema" : {
+    "$ref" : "#/definitions/body"
+  }
 }
         
       ],
@@ -453,7 +461,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/body"
+    "$ref" : "#/definitions/body_1"
   }
 }
         
@@ -609,7 +617,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/body_1"
+    "$ref" : "#/definitions/body_2"
   }
 }
         
@@ -802,7 +810,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/body_2"
+    "$ref" : "#/definitions/body_6"
   }
 },
         {
@@ -893,6 +901,46 @@
         
         
       }
+    } ,
+    
+    "put": {
+      "summary": "",
+      "description":"Marks a list of videos as liked.",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosLikedPut",
+      "parameters": [
+        {
+  "in" : "body",
+  "name" : "body",
+  "required" : true,
+  "schema" : {
+    "$ref" : "#/definitions/body_3"
+  }
+}
+        
+      ],
+      "responses": {
+        "202": {
+  "description" : "Videos have been accepted for processing. Processing happens in the background. GET /users/me/videos/liked should be used to validate success."
+}
+        ,
+        "403": {
+  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"user\"",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        ,
+        "default": {
+  "description" : "Unexpected error",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
     } 
     
   } ,
@@ -970,6 +1018,46 @@
         ,
         "404": {
   "description" : "User is not logged in",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } ,
+    
+    "put": {
+      "summary": "",
+      "description":"Marks a list of videos as skipped.",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosSkippedPut",
+      "parameters": [
+        {
+  "in" : "body",
+  "name" : "body",
+  "required" : true,
+  "schema" : {
+    "$ref" : "#/definitions/body_5"
+  }
+}
+        
+      ],
+      "responses": {
+        "202": {
+  "description" : "Videos have been accepted for processing. Processing happens in the background. GET /users/me/videos/skipped should be used to validate success."
+}
+        ,
+        "403": {
+  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"user\"",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        ,
+        "default": {
+  "description" : "Unexpected error",
   "schema" : {
     "$ref" : "#/definitions/Error"
   }
@@ -1068,6 +1156,46 @@
         ,
         "404": {
   "description" : "User is not logged in",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } ,
+    
+    "put": {
+      "summary": "",
+      "description":"Marks a list of videos as seen. The video&#39;s skipped parameter will be set to false and removed from the skipped resource if present.",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosSeenPut",
+      "parameters": [
+        {
+  "in" : "body",
+  "name" : "body",
+  "required" : true,
+  "schema" : {
+    "$ref" : "#/definitions/body_4"
+  }
+}
+        
+      ],
+      "responses": {
+        "202": {
+  "description" : "Videos have been accepted for processing. Processing happens in the background. GET /users/me/videos/seen should be used to validate success."
+}
+        ,
+        "403": {
+  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"user\"",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        ,
+        "default": {
+  "description" : "Unexpected error",
   "schema" : {
     "$ref" : "#/definitions/Error"
   }
@@ -1267,7 +1395,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/body_4"
+    "$ref" : "#/definitions/body_8"
   }
 },
         {
@@ -1354,7 +1482,7 @@
         {
   "name" : "visible",
   "in" : "query",
-  "description" : "Filter videos that are marked as not visible. If client is unauthenticated or has a token with a scope of 'user', the videos returned will only contain the \"id\" attribute of each video.",
+  "description" : "Filter videos by 'visible' field. If client is unauthenticated or has a token with a scope of 'user', the videos returned will only contain the \"id\" attribute of each video if this query parameter is set to false.",
   "required" : false,
   "type" : "boolean"
 },
@@ -1362,6 +1490,13 @@
   "name" : "deleted",
   "in" : "query",
   "description" : "Filter videos that have been deleted. The videos returned will only contain the \"id\" attribute of each video.",
+  "required" : false,
+  "type" : "boolean"
+},
+        {
+  "name" : "show_mature_content",
+  "in" : "query",
+  "description" : "Boolean indicating whether videos containing mature content should appear in the return. Default value is true.",
   "required" : false,
   "type" : "boolean"
 },
@@ -1405,7 +1540,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/body_3"
+    "$ref" : "#/definitions/body_7"
   }
 }
         
@@ -1634,6 +1769,10 @@
       "type" : "string",
       "description" : "Description of video."
     },
+    "link" : {
+      "type" : "string",
+      "description" : "Link to page of video"
+    },
     "mature_content" : {
       "type" : "boolean",
       "description" : "Boolean indicating if the video contains mature content",
@@ -1777,6 +1916,14 @@
       }
     }
   }
+},"body": {
+  "properties" : {
+    "featured_order" : {
+      "type" : "integer",
+      "format" : "int32",
+      "description" : "Order at which the video should appear within the featured list. If omitted, video will be appended to list."
+    }
+  }
 },"inline_response_200_2": {
   "properties" : {
     "data" : {
@@ -1784,13 +1931,6 @@
       "items" : {
         "$ref" : "#/definitions/User"
       }
-    }
-  }
-},"body": {
-  "type" : "object",
-  "properties" : {
-    "user" : {
-      "$ref" : "#/definitions/User"
     }
   }
 },"body_1": {
@@ -1808,6 +1948,61 @@
     }
   }
 },"body_3": {
+  "properties" : {
+    "data" : {
+      "type" : "array",
+      "items" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32",
+            "description" : "Unique identifier representing a specific video"
+          }
+        }
+      }
+    }
+  }
+},"body_4": {
+  "properties" : {
+    "data" : {
+      "type" : "array",
+      "items" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32",
+            "description" : "Unique identifier representing a specific video"
+          }
+        }
+      }
+    }
+  }
+},"body_5": {
+  "properties" : {
+    "data" : {
+      "type" : "array",
+      "items" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32",
+            "description" : "Unique identifier representing a specific video"
+          }
+        }
+      }
+    }
+  }
+},"body_6": {
+  "type" : "object",
+  "properties" : {
+    "user" : {
+      "$ref" : "#/definitions/User"
+    }
+  }
+},"body_7": {
   "required" : [ "category_id", "description", "mature_content", "title" ],
   "properties" : {
     "title" : {
@@ -1874,7 +2069,7 @@
       "description" : "Title of video."
     }
   }
-},"body_4": {
+},"body_8": {
   "properties" : {
     "key" : {
       "type" : "string",
